session-8/sg.tf
resource "aws_security_group" "main_sg" {   
    name        = "main"
    description = "Allow SSH inbound traffic"
}

resource "aws_security_group_rule" "ingress" {
  type              = "ingress"
  to_port           = 22
  protocol          = "tcp"
  from_port         = 22
  security_group_id = aws_security_group.main_sg.id
  cidr_blocks = [ "0.0.0.0/0" ]
}

resource "aws_security_group_rule" "ingress" {
  type              = "egress"
  to_port           = 80
  protocol          = "tcp"
  from_port         = 80
  security_group_id = aws_security_group.main_sg.id
  cidr_blocks = [ "0.0.0.0/0" ]
}

# count.index = count the indexes

# Corrections:
# 1. Lower case
# 2. _ instead of -
# 3. Proper name for the second_label
